# covid

./: README.md
other/: diploma script UPD.R  diploma script.R  Коды_и_наименования_ковидных_трансфертов_2020_2021.xlsx  Трансферты регионам в пандемию UPD.xlsx  Трансферты регионам в пандемию.xlsx
parser/: datamarts.py  iminfin.py  pyproject.toml
parser/data/: iminfin-1681917702.json  iminfin-output-1681923739.xlsx  iminfin_regions_code.json  output-1680558609.xlsx  output-1680599732.xlsx  output-1680855395.xlsx  output-1681120531.xlsx  output-1681120952.xlsx  output-1681201363.xlsx  output-1681202446.xlsx  output-1681202959.xlsx  output-1681203131.xlsx  output.xlsx  result_20_and_21.json  result_21.json
