[tool.poetry]
name = "parser"
version = "0.1.0"
description = ""
authors = ["Liza Zagitova <zagitova.liza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.3"
fabulous = "^0.4.0"
argparse = "^1.4.0"
scipy = "^1.9.1"
scikit-learn = "^1.1.2"
tqdm = "^4.64.1"
jupyter = "^1.0.0"
pandas = "^1.5.0"
category-encoders = "^2.5.0"
catboost = "^1.1"
openpyxl = "^3.0.10"
timm = "^0.6.12"
albumentations = "^1.3.0"
seaborn = "^0.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
